Attempting to fix report cut offs at the bottom

--- a/resources/assets/sass/print.scss
+++ b/resources/assets/sass/print.scss
@@ -56,6 +56,7 @@ table {
 
 table tr {
   page-break-inside: avoid !important;
+  page-break-before: avoid !important;
 }
 
 // Fix header row overflow
@@ -67,6 +68,7 @@ tfoot {
 }
 tr {
   page-break-inside: avoid !important;
+  page-break-before: avoid !important;
 }
 // -
 
